hphp/hack/test/typecheck/using/using_bad_escaping_this.php.exp
File "using_bad_escaping_this.php", line 8, characters 12-16:
$this implementing IDisposable or IAsyncDisposable may only be used as receiver in method invocation or passed to another function with <<__AcceptDisposable>> parameter attribute (Typing[4192])
File "using_bad_escaping_this.php", line 11, characters 18-22:
$this implementing IDisposable or IAsyncDisposable may only be used as receiver in method invocation or passed to another function with <<__AcceptDisposable>> parameter attribute (Typing[4192])
File "using_bad_escaping_this.php", line 20, characters 18-22:
$this implementing IDisposable or IAsyncDisposable may only be used as receiver in method invocation or passed to another function with <<__AcceptDisposable>> parameter attribute (Typing[4192])
File "using_bad_escaping_this.php", line 26, characters 18-22:
$this implementing IDisposable or IAsyncDisposable may only be used as receiver in method invocation or passed to another function with <<__AcceptDisposable>> parameter attribute (Typing[4192])
